modo claro - modo escuro

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </div>
 </head>
 <body>
+    <button id="toggle-dark-mode">🌙</button>
     <div class="topicos">
         <ul>
             <li>
@@ -28,5 +29,17 @@
             </li>
         </ul>
     </div>
+    <section id="sobremim">
+        <div class="sobre-mim" id="sobremim">
+            <div class="minha-foto">
+              <img src="imagens/pedro.png" alt="foto_pedro" />
+            </div>
+            <div class="texto-sobre">
+              <h2>Sobre Mim</h2>
+              <p>Olá! Meu nome é Pedro, sou estudante de Sistemas de Informação, apaixonado por tecnologia e desenvolvimento web. Estou sempre buscando aprender mais e me desenvolver como profissional.</p>
+            </div>
+          </div>
+    </section>  
+<script src="script.js"></script>    
 </body>
 </html>
