Curriculo e atualização topicos

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             </div>
           </div>
     </section>  
+<a href="cv.pdf" download class="btn btn--dowload">Dowload CV</a>
 <script src="script.js"></script>    
 </body>
 </html>
